--- a/mystyle.css
+++ b/mystyle.css
@@ -3,12 +3,11 @@
 #nav-td { width: 200px: text-align:center;}
        
 
-h1 {
-            color: rgb(0, 232, 15);
+h1 {color: rgb(0, 232, 15);
         }  
         
-        body {
-            background-color: rgb(128, 128, 128);
+        body {background-color: rgb(128, 128, 128);
         }
-            
+.set2 {text-align: center;
+       width: 800px}
         
