--- a/mystyle.css
+++ b/mystyle.css
@@ -9,5 +9,7 @@ h1 {color: rgb(0, 232, 15);
         body {background-color: rgb(128, 128, 128);
         }
 .set2 {text-align: center;
-       width: 800px; padding-left: 340px}
+       width: 800px; 
+       padding-left: 340px;
+}
         
